==> edgeimpulse/firmware-silabs-thunderboard-sense-2/ei-workspace/edgeimpulse/ingestion-sdk-platform/SiliconLabs/ei_device_silabs_efm32mg.cpp <==
#include "ei_device_silabs_efm32mg.h"
#include "ei_silabs_fs_commands.h"
#include "ei_classifier_porting.h"
#include "ei_microphone.h"
#include "ei_inertialsensor.h"
#include "repl.h"
#include "efr32mg12p332f1024gl125.h"
#include <cstdarg>
#include "math.h"
#define EI_LED_BLUE     rgb_led_set(0xFF, 58>>2, 180>>2, 205>>2)
#define EI_LED_GREEN    rgb_led_set(0xFF, 164>>2, 198>>2, 9>>2)
#define EI_LED_YELLOW   rgb_led_set(0xFF, 255>>2, 187>>2, 5>>2)
#define EI_LED_RED      rgb_led_set(0xFF, 255>>2, 67>>2, 26>>2)
#define EI_LED_OFF      rgb_led_set(0xFF, 0, 0, 0)
#define DEVICE_ID_MAX_SIZE  32
#define EDGE_STRINGIZE_(x) #x
#define EDGE_STRINGIZE(x) EDGE_STRINGIZE_(x)

void EiDeviceEfm32Mg::delay_ms(uint32_t milliseconds)
{
    sl_sleeptimer_delay_millisecond(milliseconds);
}

uint64_t EiDeviceEfm32Mg::get_ms(void)
{
    return sl_sleeptimer_tick_to_ms(sl_sleeptimer_get_tick_count());
}
