==> peteing/edgeimpulse-standalone-firmware-nordic-thingy91/edge-impulse/ingestion-sdk-platform/NordicSemi-nrf91/ei_device_nordic_nrf91.cpp <==
#include "ei_device_nordic_nrf91.h"
#include "ei_zephyr_flash_commands.h"
#include "ei_inertialsensor.h"
#include "ei_lightsensor.h"
#include "ei_environmentsensor.h"
#include "repl.h"
#include <cstdarg>
#include "math.h"
#include <sys/printk.h>
#include <drivers/uart.h>
#include <modem/modem_info.h>
#include "ei_run_impulse_thread.h"
    #include "connectivity.h"
#define EI_LED_RED      BOARD_ledSetLedOn(1, 0, 0)
#define EI_LED_GREEN    BOARD_ledSetLedOn(0, 1, 0)
#define EI_LED_BLUE     BOARD_ledSetLedOn(0, 0, 1)
#define EI_LED_YELLOW   BOARD_ledSetLedOn(0, 1, 1)
#define EI_LED_OFF      BOARD_ledSetLedOn(0, 0, 0)

void EiDeviceNRF91::delay_ms(uint32_t milliseconds)
{
    k_msleep((int32_t)milliseconds);
}

uint64_t EiDeviceNRF91::get_ms(void)
{
    return (uint64_t)k_uptime_get();
}
